# scam-conversation-analysis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: analyse.py  extract.py  llm.py  main.py  models.py  store.py
evals/: cases.jsonl  test_eval.py
tests/: test_api.py  test_extract.py  test_models.py
